--- a/templates/update.html
+++ b/templates/update.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="content">
-    <h1 style="text-align: center">Update Task</h1>
+    <h1 style="text-align: center">Update Record</h1>
 
     <div class="form">
         <form action="/update/{{record.id}}" method="POST">
