--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <h1 style="text-align: center">Record Master</h1>
     <p>Welcome to the Record Master app, here you can choose and manage your records</p>
     {% if records| length < 1 %}
-    <h4 style="text-align: center">There are no tasks. create one below.</h4>
+    <h4 style="text-align: center">There are no records. create one below.</h4>
     {% else %}
     <table>
         <tr>
@@ -35,6 +35,7 @@
     </table>
     {% endif %}
     
+    <h3>Add Record</h3>
     <div class="form">
         <form action="/" method="POST">
             Record Name:<input type="text" name="content" id="content" required placeholder="Record Name">
