--- a/templates/update.html
+++ b/templates/update.html
@@ -7,7 +7,10 @@
 {% block body %}
 <div class="content">
     <h1 style="text-align: center">Update Record</h1>
-
+    <br></br>
+    <h2>{{record.artist}} - {{record.content}}</h2>
+    <h3>Additional Data</h3>
+    <br></br>
     <div class="form">
         <form action="/update/{{record.id}}" method="POST">
             Record Name: <input type="text" name="content" id="content" required value="{{record.content}}">
