--- a/templates/index.html
+++ b/templates/index.html
@@ -38,9 +38,9 @@
     <h3>Add Record</h3>
     <div class="form">
         <form action="/" method="POST">
-            Record Name:<input type="text" name="content" id="content" required placeholder="Record Name">
+            Record Name<input type="text" name="content" id="content" required placeholder="Record">
             <br></br>
-            Artist<input type="text" name="artist" id="artist" required placeholder="Artist Name">
+            Artist<input type="text" name="artist" id="artist" required placeholder="Artist">
             <br></br>
             <input type="submit" value="Add Record">
         </form>
