--- a/templates/update.html
+++ b/templates/update.html
@@ -13,9 +13,9 @@
     <br></br>
     <div class="form">
         <form action="/update/{{record.id}}" method="POST">
-            Record Name: <input type="text" name="content" id="content" required value="{{record.content}}">
+            Record Name<input type="text" name="content" id="content" required placeholder="Record" value="">
             <br></br>
-            Artist: <input type="text" name="artist" id="artist" required value="{{record.artist}}">
+            Artist<input type="text" name="artist" id="artist" required placeholder="Artist" value="">
             <br></br>
             <input type="submit" value="Update">
             
