--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,7 +13,11 @@ p {
 .content {
     margin: 0 auto;
     width: 80%;
-    }
+}
+
+.random {
+    color: darkorange;
+}
 
 table, td, th {
     border: 2px solid #aaa;
