--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
     
     <h3>Add Record</h3>
     <div class="form">
-        <form action="/" method="POST">
+        <form action="/Home" method="POST">
             Record Name<input type="text" name="content" id="content" required placeholder="Record">
             <br></br>
             Artist<input type="text" name="artist" id="artist" required placeholder="Artist">
