--- a/templates/update.html
+++ b/templates/update.html
@@ -18,7 +18,7 @@
             Artist<input type="text" name="artist" id="artist" required placeholder="Artist" value="">
             <br></br>
             <input type="submit" value="Update">
-            <a href= "/" value= "Cancel">Cancel</a>
+            <a href= "/Home" value= "Cancel">Cancel</a>
         </form>
     </div>
 </div>
